--- a/archlinux/.config/polybar/config
+++ b/archlinux/.config/polybar/config
@@ -95,7 +95,7 @@ font-1 = DejaVu Sans Mono Nerd Font:style=Solid:pixelsize=16;3
 
 modules-left = i3
 modules-center =
-modules-right = network network-up network-down info-kernel date
+modules-right = network-up network-down network info-kernel date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
