--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -33,12 +33,12 @@
     "default": "\uf29c"
   },
   "diagnostic.highlightOffset": 100,
-  "diagnostic.virtualText": false,
+  "diagnostic.virtualText": true,
   "diagnostic.errorSign": "",
   "diagnostic.infoSign": "",
   "diagnostic.warningSign": "",
   "diagnostic.hintign": "",
-  "diagnostic.refreshOnInsertMode": true,
+  "diagnostic.refreshOnInsertMode": false,
   "diagnostic.refreshAfterSave": true,
   "codeLens.enable": true,
   "list.nextKeymap": "<C-t>",
