--- a/archlinux/.gitconfig
+++ b/archlinux/.gitconfig
@@ -3,8 +3,8 @@
 	name = Dimitri Sabadie
 	signingkey = 23CDFD7CAFBA2EDC
 [alias]
-	slog = log --graph --all --pretty=format:\"%C(yellow)%h%Cblue%d %Creset%s %C(green)%cr%Creset (%C(magenta)%an%Creset)\"
-  fp = fetch --all --prune
+        slog = log --graph --all --pretty=format:\"%C(yellow)%h%Cblue%d %Creset%s %C(green)%cr%Creset (%C(magenta)%an%Creset)\"
+        fp = fetch --all --prune
 [core]
 	pager = less -F -X
 [commit]
@@ -15,3 +15,5 @@
 	defaultRemote = origin
 [github]
 	user = phaazon
+[rebase]
+	autoSquash = true
