--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -1,7 +1,7 @@
 set -sg escape-time 0
 set-option -g prefix C-a
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color*:Tc"
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",tmux-256color*:Tc"
 set -g allow-rename on
 set -g set-titles on; set -g set-titles-string "(#h) #T"
 setw -g aggressive-resize on
