Update some stuff among a nicety in tmux.

--- a/archlinux/.config/picom.conf
+++ b/archlinux/.config/picom.conf
@@ -1,7 +1,7 @@
 background = true;
 backend = "glx";
 vsync = true
-unredir-if-possible = false;
+#unredir-if-possible = false;
 fading = true;
 shadow = false;
 
