--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -113,8 +113,8 @@ bindsym XF86Sleep exec --no-startup-id "systemctl suspend"
 bindsym Print exec "maim /tmp/img_$(date +%m%d%y_%H%M%S).png"
 bindsym --release Shift+Print exec "maim -s /tmp/img_$(date +%m%d%y_%H%M%S).png"
 bindsym $mod+Print exec "scrot -i /tmp/img_$(date +%m%d%y_%H%M%S).png"
-bindsym Mod4+l exec --no-startup-id "cat /home/phaazon/.fehbg | tail -n1 | cut -d\' -f 2 | xargs i3lock -ti && random-wallpaper"
-bindsym Mod4+h exec --no-startup-id "cat /home/phaazon/.fehbg | tail -n1 | cut -d\' -f 2 | xargs i3lock -ti && random-wallpaper && systemctl hibernate"
+bindsym Mod4+l exec --no-startup-id "/home/phaazon/bin/random-wallpaper && cat /home/phaazon/.fehbg | tail -n1 | cut -d\' -f 2 | xargs i3lock -ti"
+bindsym Mod4+h exec --no-startup-id "/home/phaazon/bin/random-wallpaper && cat /home/phaazon/.fehbg | tail -n1 | cut -d\' -f 2 | xargs i3lock -ti && systemctl hibernate"
 
 # reload the configuration file
 bindsym $mod+Shift+X reload
