--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -4,7 +4,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:DejaVu Sans Mono 8
+font pango:JetBrainsMono Nerd Font 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
