--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -265,8 +265,9 @@ focus_follows_mouse no
 workspace_auto_back_and_forth false
 show_marks yes
 
-exec picom --experimental-backends -b
+exec --no-startup-id picom --experimental-backends -b
 exec --no-startup-id sh ~/.fehbg
+exec --no-startup-id setxkbmap -option caps:escape &
 exec --no-startup-id xset r rate 200 30
 exec --no-startup-id xset -dpms
 exec --no-startup-id xset dpms 0 0 0
