--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -89,3 +89,8 @@ setw -g window-status-format "#I#[fg=$color_grey]:#[fg=$color_blue]#W#[fg=$color
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black"
 
 set -g message-style fg="$color_background",bg="$color_magenta",bold
+
+# Plugins setup
+
+# Continuum
+set -g @continuum-restore 'on'
