--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -34,6 +34,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 set -g @onedark_time_format "%H:%M"
 
@@ -69,7 +70,7 @@ set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
 set -g status-left " "
-set -g status-right "#[fg=$color_red_light]#S #[fg=$color_blue_light]${USER}#[fg=$color_cyan]@#[fg=$color_yellow]#H #[fg=$color_grey]%H:%M "
+set -g status-right "#{prefix_highlight} #[fg=$color_red_light]#S #[fg=$color_blue_light]${USER}#[fg=$color_cyan]@#[fg=$color_yellow]#H #[fg=$color_grey]%H:%M "
 set -g status-right-length 200
 
 # messaging
