Update config (alacritty font’s size and choose-session keybinding in tmux).

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -10,6 +10,7 @@ set -g mouse on
 # key bindings
 set-window-option -g mode-keys vi
 bind -T prefix q display-panes -d 0
+bind-key    -T prefix l choose-session
 bind-key    -T prefix Space new-window
 bind-key    -T prefix c select-pane -L
 bind-key    -T prefix t select-pane -D
