Update lots of things.

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -113,5 +113,6 @@
     "<<": "gitStage",
     ">>": "gitUnstage"
   },
-  "rust-analyzer.inlayHints.chainingHints": false
+  "rust-analyzer.inlayHints.chainingHints": false,
+  "bookmark.sign": "🔖"
 }
