--- a/archlinux/.config/polybar/config
+++ b/archlinux/.config/polybar/config
@@ -109,7 +109,7 @@ format-foreground = ${colors.violet2}
 
 [module/i3]
 type = internal/i3
-format = <label-state> <label-mode>
+format =  <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
 strip-wsnumbers = false
@@ -150,6 +150,10 @@ label-urgent = %name%
 label-urgent-foreground = ${colors.violet1}
 label-urgent-background = ${colors.violet4}
 label-urgent-padding = 4
+
+label-separator = " "
+label-separator-padding = 0
+label-separator-background = ${colors.transparent}
 
 [module/date]
 type = internal/date
