Update polybar and nvim.

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -114,5 +114,5 @@
     ">>": "gitUnstage"
   },
   "rust-analyzer.inlayHints.chainingHints": false,
-  "bookmark.sign": "🔖"
+  "bookmark.sign": ""
 }
