--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -43,7 +43,7 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # Visual tweaks
 
-color_background="colour235"
+color_background="#523143"
 color_black="colour234"
 color_red="colour1"
 color_red_light="colour9"
@@ -59,7 +59,7 @@ color_cyan="colour6"
 color_cyan_light="colour14"
 color_white="colour7"
 color_white_light="colour15"
-color_grey="colour8"
+color_grey="colour250"
 
 # panes
 set -g pane-active-border-style fg="$color_blue"
