Fix tmux status line background color.

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -43,7 +43,7 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # Visual tweaks
 
-color_background="#523143"
+color_background="#2b2d37"
 color_black="colour234"
 color_red="colour1"
 color_red_light="colour9"
