--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -128,8 +128,8 @@ blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = false;
 blur-background-exclude = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'"
+  "name = 'slop'",
+  "window_type = 'desktop'"
 ];
 
 #################################
