Big big update, lots of colors!

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -87,20 +87,20 @@ font:
     family: JetBrainsMono Nerd Font
     style: Regular
 
-  # Bold font face
-  bold:
-    family: JetBrainsMono Nerd Font
-    style: Bold
+  # # Bold font face
+  # bold:
+  #   family: JetBrainsMono Nerd Font
+  #   style: Bold
 
-  # Italic font face
-  italic:
-    family: JetBrainsMono Nerd Font
-    style: Italic
+  # # Italic font face
+  # italic:
+  #   family: JetBrainsMono Nerd Font
+  #   style: Italic
 
-  # Bold italic font face
-  bold_italic:
-    family: JetBrainsMono Nerd Font
-    style: Bold Italic
+  # # Bold italic font face
+  # bold_italic:
+  #   family: JetBrainsMono Nerd Font
+  #   style: Bold Italic
 
   # Point size
   size: 12.0
