--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -32,15 +32,20 @@
     "typeParameter": "\uf728",
     "default": "\uf29c"
   },
+  "diagnostic.enable": true,
+  "diagnostic.enableSign": true,
   "diagnostic.highlightOffset": 100,
   "diagnostic.virtualText": true,
+  "diagnostic.virtualTextCurrentLineOnly": false,
+  "diagnostic.virtualTextPrefix": "🠄 ",
   "diagnostic.errorSign": "",
   "diagnostic.infoSign": "",
   "diagnostic.warningSign": "",
   "diagnostic.hintSign": "",
-  "diagnostic.refreshOnInsertMode": false,
+  "diagnostic.refreshOnInsertMode": true,
   "diagnostic.refreshAfterSave": true,
   "codeLens.enable": true,
+  "list.selectedSignText": "·",
   "list.nextKeymap": "<C-t>",
   "list.previousKeymap": "<C-s>",
   "coc.preferences.currentFunctionSymbolAutoUpdate": true,
