--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -156,9 +156,9 @@ colors:
   #
   # Colors which should be used to draw the terminal cursor. If these are unset,
   # the cursor color will be the inverse of the cell color.
-  #cursor:
-    #text: '0x000000'
-    #cursor: '0x3b84c0'
+  cursor:
+    text: '0xFFFFFF'
+    cursor: '0x5dbbc1'
 
   # Selection colors
   #
@@ -245,7 +245,7 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.7
+background_opacity: 1.0
 
 # Mouse bindings
 #
