--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -377,9 +377,9 @@ command_on_bell none
 
 #: Window layout {{{
 
-remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
+remember_window_size  no
+initial_window_width  840
+initial_window_height 620
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
