Neovim and DOOM Emacs update.

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -5,6 +5,7 @@
   },
   "suggest.enablePreview": false,
   "suggest.echodocSupport": true,
+  "suggest.timeout":500,
   "suggest.completionItemKindLabels": {
     "keyword": "\uf1de",
     "variable": "\ue79b",
