--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -119,7 +119,7 @@
     ">>": "gitUnstage"
   },
   "rust-analyzer.serverPath": "~/github/rust-analyzer/target/release/rust-analyzer",
-  "rust-analyzer.assist.importMergeBehaviour": "none",
+  "rust-analyzer.assist.importMergeBehaviour": "full",
   "rust-analyzer.inlayHints.chainingHints": true,
   "rust-analyzer.inlayHints.refreshOnInsertMode": true,
   "coc.preferences.formatOnType": true,
