--- a/fzf/.fzfrc
+++ b/fzf/.fzfrc
@@ -4,10 +4,10 @@ source /usr/share/fzf/key-bindings.zsh
 export FZF_DEFAULT_COMMAND='rg --files --follow'
 
 export FZF_DEFAULT_OPTS="
-  --no-height -m
-  --color=dark
-  --color=fg:-1,bg:-1,hl:#c678dd,fg+:#c678dd,bg+:-1,hl+:#d858fe
-  --color=info:#98c379,prompt:#61afef,pointer:#be5046,marker:#e5c07b,spinner:#61afef,header:#61afef
+  --height 40%
+  -m
+  --reverse
+  --info=inline
   "
 
 export FZF_CTRL_T_OPTS='--border --height 40'
