Update visual aspect of tmux.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,14 +37,12 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
-set -g @onedark_time_format "%H:%M"
-
 run -b '~/.tmux/plugins/tpm/tpm'
 
 # Visual tweaks
 
 color_background="#2b2d37"
-color_black="colour234"
+color_black="colour8"
 color_red="colour1"
 color_red_light="colour9"
 color_green="colour2"
@@ -79,14 +77,14 @@ set -g message-style bg="$color_yellow",fg="$color_black"
 set -g message-command-style bg=black,fg=blue
 
 # window mode
-setw -g mode-style bg="$color_green",fg="$color_black"
+setw -g mode-style bg="$color_red_light",fg="$color_background"
 
 # window status
-setw -g window-status-current-style fg="$color_yellow"
-setw -g window-status-current-format "#I#[fg=$color_grey]:#[fg=$color_magenta]#W#[fg=$color_green]#F"
+setw -g window-status-current-style fg="$color_cyan_light"
+setw -g window-status-current-format "#I#[fg=$color_blue_light]:#[fg=$color_red_light]#W#[fg=$color_magenta_light]#F"
 
-setw -g window-status-style fg="$color_grey"
-setw -g window-status-format "#I#[fg=$color_grey]:#[fg=$color_blue]#W#[fg=$color_green]#F"
+setw -g window-status-style fg="$color_cyan"
+setw -g window-status-format "#I#[fg=$color_blue]:#[fg=$color_black]#W#[fg=$color_magenta]#F"
 
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black"
 
