Update tmux.conf colors.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -68,8 +68,8 @@ set -g status-justify left
 set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
-set -g status-left " "
-set -g status-right "#{prefix_highlight} #[fg=$color_red_light]#S #[fg=$color_blue_light]${USER}#[fg=$color_cyan]@#[fg=$color_yellow]#H #[fg=$color_grey]%H:%M "
+set -g status-left "#[fg=$color_background,bg=$color_magenta_light]#S#[bg=$color_background]#[fg=$color_green] » "
+set -g status-right "#{prefix_highlight} #[fg=$color_blue]${USER}#[fg=$color_black]@#[fg=$color_red]#H #[fg=$color_green]%H:%M"
 set -g status-right-length 200
 
 # messaging
@@ -81,7 +81,7 @@ setw -g mode-style bg="$color_red_light",fg="$color_background"
 
 # window status
 setw -g window-status-current-style fg="$color_cyan_light"
-setw -g window-status-current-format "#I#[fg=$color_blue_light]:#[fg=$color_red_light]#W#[fg=$color_magenta_light]#F"
+setw -g window-status-current-format "#I#[fg=$color_blue_light]:#[fg=$color_magenta_light]#W#[fg=$color_red_light]#F"
 
 setw -g window-status-style fg="$color_cyan"
 setw -g window-status-format "#I#[fg=$color_blue]:#[fg=$color_black]#W#[fg=$color_magenta]#F"
