Fix tmux left status length.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -70,6 +70,7 @@ set -g status-interval 1
 set -g status-position top
 set -g status-left "#[fg=$color_background,bg=$color_magenta_light]#S#[bg=$color_background]#[fg=$color_green] » "
 set -g status-right "#{prefix_highlight} #[fg=$color_blue]${USER}#[fg=$color_black]@#[fg=$color_red]#H #[fg=$color_green]%H:%M"
+set -g status-left-length 200
 set -g status-right-length 200
 
 # messaging
